--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "graphpack",
-    "build": "graphpack build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "graphpack build"
   },
   "keywords": [],
   "author": "",
